// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/blocksEditor/rootInput > should match Display snapshot 1`] = `
<div>
  <div
    class="Combobox RootInput"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="RootInput__control"
    >
      <div
        class="RootInput__value-container"
      >
        
        
        
        <input
          aria-controls="cl-0"
          aria-expanded="false"
          autocomplete="off"
          autofocus=""
          class="RootInput__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`components/blocksEditor/rootInput > should match Input snapshot 1`] = `
<div>
  <div
    class="Combobox RootInput"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="RootInput__control"
    >
      <div
        class="RootInput__value-container"
      >
        
        
        
        <input
          aria-controls="cl-1"
          aria-expanded="false"
          autocomplete="off"
          autofocus=""
          class="RootInput__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`components/blocksEditor/rootInput > should match Input snapshot with menu open 1`] = `
<div>
  <div
    class="Combobox RootInput"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="RootInput__control"
    >
      <div
        class="RootInput__value-container"
      >
        
        
        <div
          class="RootInput__placeholder"
        >
          Introduce your text or your slash command
        </div>
        <input
          aria-activedescendant="cl-2-option-0"
          aria-controls="cl-2"
          aria-expanded="true"
          autocomplete="off"
          autofocus=""
          class="RootInput__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu RootInput__menu "
    >
      <div
        class="RootInput__menu-list"
        id="cl-2"
        role="listbox"
      >
        
        <div
          aria-selected="false"
          class="RootInput__option RootInput__option--is-focused"
          id="cl-2-option-0"
          role="option"
        >
          /title Creates a new Title block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-1"
          role="option"
        >
          /subtitle Creates a new Sub title block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-2"
          role="option"
        >
          /subsubtitle Creates a new Sub Sub title block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-3"
          role="option"
        >
          /image Creates a new Image block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-4"
          role="option"
        >
          /text Creates a new Text block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-5"
          role="option"
        >
          /divider Creates a new Divider block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-6"
          role="option"
        >
          /list-item Creates a new List item block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-7"
          role="option"
        >
          /attachment Creates a new Attachment block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-8"
          role="option"
        >
          /quote Creates a new Quote block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-9"
          role="option"
        >
          /video Creates a new Video block.
        </div>
        <div
          aria-selected="false"
          class="RootInput__option"
          id="cl-2-option-10"
          role="option"
        >
          /checkbox Creates a new Checkbox block.
        </div>
      </div>
    </div>
  </div>
</div>
`;
